--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,41 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#ec4899" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#4f46e5" />
   <meta name="description"
-    content="Bureau Digital - Création digitale & gestion de communauté avec une touche de magie locale" />
+    content="Bureau Digital - Création digitale & gestion de communauté avec une touche de magie locale." />
+  <meta name="author" content="Bureau Digital" />
+
+  <!-- Open Graph (partage réseaux sociaux) -->
+  <meta property="og:title" content="Bureau Digital" />
+  <meta property="og:description" content="Création digitale & Community Management avec une touche de magie locale." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://bureaudigital.com" />
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!-- Google Fonts pour une meilleure typographie -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
 
-  <title>Bureau Digital - Création digitale & Community Management</title>
+  <title>
+    Bureau Digital - Création digitale & Community Management
+  </title>
 
   <style>
     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
+      background-color: #f8fafc;
+      margin: 0;
     }
   </style>
 </head>
