--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
   <meta property="og:description" content="Création digitale & Community Management avec une touche de magie locale." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bureaudigital.com" />
-  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:image" content="logo.png" />
 
   <!-- Favicon -->
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
